--- a/Unfolded/resources/ui/unfolded_dialog.ui
+++ b/Unfolded/resources/ui/unfolded_dialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Unfolded Studio</string>
+   <string>Unfolded</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="leftMargin">
